launch first app

--- a/src/lightmlboard/templates/index.fr.html
+++ b/src/lightmlboard/templates/index.fr.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link TYPE="text/css" href="{{style}}" rel="stylesheet"/>
-<title>LihgtMLBoard Main Page</title>
+<title>LightMLBoard</title>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <link rel="shortcut icon" href="{{icon}}" />
 <meta content="" name="description" />
