--- a/src/lightmlboard/static/style.css
+++ b/src/lightmlboard/static/style.css
@@ -1,30 +1,185 @@
-.admonition-mathdef {
-	color: #424242;
-	background-color: #F9F9F9;
-	font-size: 14px;
+/* css Zen Garden submission 175 - 'Business Style', by Gunta Klavina, http://www.klavina.com/ */
+/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
+/* All associated graphics copyright 2005, Gunta Klavina */
+/* Added: July 9th, 2005 */
+
+/* IMPORTANT */
+/* This design is not a template. You may not reproduce it elsewhere without the 
+   designer's written permission. However, feel free to study the CSS and use 
+   techniques you learn from it elsewhere. */
+
+
+
+body
+    {
+    margin: 0;
+    padding: 0;
+    color: #333;
+    font: 13px Trebuchet MS, Lucida Sans Unicode, Arial, sans-serif;
+    background: #E2EBED;
+    text-align: center;
+    }
+a
+    {
+    color: #307082;
+    }
+a:hover
+    {
+    color: #D60808;
+    }
+abbr
+    {
+    border: none;
+    }
+
+.preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, .zen-resources h3.resources, .design-archives h3.archives
+    {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    }
+.design-selection h3.select {
+    display: none;
 }
-.admonition-todoext {
-	color: #424242;
-	background-color: #F9F9B9;
-	font-size: 14px;
-}
-.admonition-faqref {
-	color: #424242;
-	background-color: #F9F9B9;
-	font-size: 14px;
-}
-.admonition-exref {
-	color: #424242;
-	background-color: #F9F9B9;
-	font-size: 14px;
-}
-.admonition-nbref {
-	color: #424242;
-	background-color: #F9F9B9;
-	font-size: 14px;
-}
-.admonition-blocref {
-	color: #424242;
-	background-color: #F9F9B9;
-	font-size: 14px;
-}
+
+.page-wrapper
+    {
+    margin: 0 auto;
+    width: 724px;
+    position: relative;
+    background: #fff;
+    padding: 0 10px 0 10px;
+    text-align: left;
+    }
+* html .page-wrapper
+    {
+    width: 744px;
+    w\idth: 724px;
+    }
+
+header
+    {
+    position: absolute;
+    top: 25px;
+    left: 40px;
+    }
+h1
+    {
+    font-size: 24px;
+    margin: 0;
+    }
+h2
+    {
+    font-size: 12px;
+    margin: 0;
+    }
+
+.summary
+    {
+    padding-top: 85px;
+    }
+.summary h2
+    {
+    font-size: 14px;
+    position: absolute;
+    top: 45px;
+    right: 20px;
+    margin: 0;
+    }
+.summary p
+    {
+    font-size: 12px;
+    position: absolute;
+    top: 65px;
+    right: 20px;
+    margin: 0;
+    }
+.page-wrapper .intro .summary p:first-child
+    {
+    font-size: 11px;
+    background: url("background.jpg") no-repeat;
+    margin: 0;
+    width: 164px;
+    height: 141px;
+    padding: 30px 530px 0 30px;
+    color: #fff;
+    font: 12px/150% Trebuchet MS;
+    }
+
+.preamble, .supporting
+    {
+    margin: 0 20px 0 243px;
+    }
+.supporting p, .preamble p
+    {
+    line-height: 150%;
+    margin: 10px 0 10px 0;
+    }
+
+.supporting h2, .preamble h2
+    {
+    margin: 30px 0 10px 0;
+	}
+	
+.cookies p
+	{
+    margin: 50px 0 10px 0;
+	}
+	
+.sidebar
+    {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    width: 210px;
+    }
+.design-selection ul, .design-archives ul, .zen-resources ul
+    {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 0 0 40px;
+    }
+.design-selection ul li a
+    {
+    text-decoration: underline;
+    display: block;
+    font-size: 13px;
+    }
+.design-selection ul li.c, .design-selection ul li a.designer-name
+    {
+    display: inline;
+    font-size: 12px;
+    color: #333;
+    }
+.design-selection ul li a.designer-name
+    {
+    text-decoration: none;
+    }
+.design-selection ul li a.designer-name:hover
+    {
+    color: #D60808;
+    }
+.design-selection ul li
+    {
+    font-size: 12px;
+    border-bottom: 1px solid #E6EEF0;
+    }
+
+footer
+    {
+    color: #fff;
+    height: 48px;
+    text-align: right;
+    padding: 0 10px 0 0;
+    line-height: 26px;
+    font-size: 11px;
+    }
+footer a
+    {
+    color: #fff;
+    text-decoration: none;
+    }
+footer a:hover
+    {
+    text-decoration: underline;
+    }
